--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ permissions:
   contents: read
 
 jobs:
-  gradle:
+  example_matrix:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
